Admin GetProducts implementation

--- a/ShopApp/ShopApp.csproj
+++ b/ShopApp/ShopApp.csproj
@@ -10,4 +10,12 @@
     <ProjectReference Include="..\Shop.Application\Shop.Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\lib\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="bootstrap" Version="5.2.3" />
+  </ItemGroup>
+
 </Project>
