--- a/ShopApp/Properties/launchSettings.json
+++ b/ShopApp/Properties/launchSettings.json
@@ -11,8 +11,8 @@
     "ShopApp": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
-      "applicationUrl": "https://localhost:7100;http://localhost:5074",
+      "launchBrowser": false,
+      "applicationUrl": "https://localhost:5000;http://localhost:5074",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
