--- a/ShopApp/ShopApp.csproj
+++ b/ShopApp/ShopApp.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <PackageReference Include="bootstrap" Version="5.2.3" />
+    <PackageReference Include="Stripe.net" Version="41.21.0-beta.2" />
   </ItemGroup>
 
 </Project>
